--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "qr-code-generator",
   "version": "0.1.0",
-  "homepage": "https://Purpledevil27/Qr-Code-Generator",
+  "homepage": "https://purpledevil27.github.io/Qr-code-generator",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
