--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "qr-code-generator",
   "version": "0.1.0",
-  "homepage": "https://purpledevil27.github.io/Qr-code-generator",
+  "homepage": "https://purpledevil27.github.io/Qr-codeGenerator",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "gh-pages": "^4.0.0",
     "qrcode": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -43,9 +42,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
+    "gh-pages": "^4.0.0",
     "postcss": "^8.4.16",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.1.8"
   }
 }
-
